# AdventOfCode2022

./: .gitignore  Cargo.toml
src/: aoc_day.rs  common.rs  exec.rs
templates/: day.rs.tpl
test_inputs/: day1.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day2.txt  day3.txt  day4.txt  day5.txt  day6-1.txt  day6-2.txt  day6-3.txt  day6-4.txt  day6.txt  day7.txt  day8.txt  day9-1.txt  day9.txt
