[package]
name = "aoc2022_niels_overkamp"
version = "0.1.0"
authors = ["niels <niels.overkamp@gmail.com>"]
edition = "2021"
default-run = "aoc2022_niels_overkamp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
hex = "0.4.2"
arguments = "0.6.2"
ansi_term = "0.12.1"
chrono = "0.4.19"
curl = "0.4.34"
tempfile = "3.1.0"
itertools = "0.10.1"
petgraph = "0.6.0"
primes = "0.3.0"
nom = "7.1.1"
